k8s-specifications/network-policies/ai-analyzer-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ai-analyzer-network-policy
spec:
  podSelector:
    matchLabels:
      app: ai-analyzer
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - podSelector:
        matchLabels:
          app: result
    ports:
    - protocol: TCP
      port: 5001
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: db
    ports:
    - protocol: TCP
      port: 5432 
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
