k8s-specifications/network-policies/db-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-network-policy
spec:
  podSelector:
    matchLabels:
      app: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
    - podSelector:
        matchLabels:
          app: result
    - podSelector:
        matchLabels:
          app: ai-analyzer
    ports:
    - protocol: TCP
      port: 5432
